--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
       function xPos(x) {
         return x*(P.cnv.width-P.padX*2)/(P.stepX*P.cntX)+P.padX;
       }
+      function xPosLog(xPro) {
+        return xPro*(P.cnv.width-P.padX*2)/(P.cntX)+P.padX;
+      }
       function yPos(y) {
         return (P.stepY*P.cntY-y)*(P.cnv.height-P.padY*2)/(P.stepY*P.cntY)+P.padY;
       }
@@ -114,6 +117,17 @@
           return r[prop];
         },col);
       }
+      function curveLog(fn,col='#FECB00') {        
+        P.ctx.strokeStyle = col;	
+  			P.ctx.beginPath();
+        for (let x=0; x<=P.cntX; x=rnd(x+.1)) {	   
+          if (fn(100*Math.pow(10,x))<=P.stepY*P.cntY) {
+            P.ctx.lineTo(xPosLog(x), yPos(fn(100*Math.pow(10,x))));		
+            console.log(x+'->'+xPosLog(x)+'->'+100*Math.pow(10,x)+'->'+rnd(fn(100*Math.pow(10,x)))+'->'+yPos(fn(100*Math.pow(10,x))));          
+          }       
+	    	}
+		    P.ctx.stroke();
+      }
       function curve(fn,col='#FECB00') {        
         P.ctx.strokeStyle = col;	
   			P.ctx.beginPath();
@@ -124,6 +138,50 @@
           }		
 	    	}
 		    P.ctx.stroke();
+      }
+      function setupLogPlot(lblX,lblY) {
+        P.m = new Map();
+        const ctx = P.ctx = P.cnv.getContext('2d');
+        $('#plot_btn').hide();
+        $('#plot').show();
+
+        ctx.strokeStyle = "#5d9300";
+        ctx.fillStyle = "white";
+        ctx.textAlign = 'center';
+        ctx.textBaseline = 'middle';
+        ctx.font = '12px san serif';
+        
+        ctx.beginPath();
+        ctx.textBaseline = 'top';
+        for (let i=0; i<=P.cntX; i++) {
+          const x = 100*Math.pow(10,i), xp = xPosLog(i);
+          ctx.moveTo(xp,P.padY);
+          ctx.lineTo(xp,P.cnv.height-P.padY);	
+          ctx.fillText(x,xp,P.cnv.height-P.padY+5);	
+        }
+        ctx.textAlign = 'right';
+        ctx.textBaseline = 'middle';
+        for (let j=0; j<=P.cntY; j++) {
+          const y = j*P.stepY, yp = yPos(y);
+          ctx.moveTo(P.padX,yp);
+          ctx.lineTo(P.cnv.width-P.padX,yp);	
+          ctx.fillText(y,P.padX-5,yp);	
+        }
+        ctx.stroke();
+        ctx.save();
+
+        ctx.fillStyle = '#FECB00';
+        ctx.font = '14px san serif';
+        ctx.textAlign = 'center';
+        ctx.fillText(lblX,Cnv.width/2,Cnv.height-.33*P.padY);
+        
+        ctx.textAlign='right';
+        ctx.textBaseline='bottom';
+        ctx.fillStyle = '#FECB00';
+        ctx.fillText(lblY,P.cnv.width-P.padX,P.padY-5);
+
+        ctx.lineWidth = 2;
+        return ctx;
       }
       function setupPlot(lblX,lblY) {
         P.m = new Map();
