--- a/conditions.html
+++ b/conditions.html
@@ -99,7 +99,7 @@
 
 		});		
 		if (Conds.length==0) {
-			$('#cond').html('<em>None</em>');
+			$('#cond').html('<span style="font-style:italic">None</span>');
 			$('.gt0').hide();
 		}		
 		setGridBtn();
