--- a/headtool.html
+++ b/headtool.html
@@ -1,8 +1,4 @@
-<style scoped=scoped>
-	em {
-		font-size: smaller;
-		font-weight: lighter;
-	}
+<style>
 	strong {
 		font-size: smaller;
 		font-weight: bold;
