--- a/pump_eff.html
+++ b/pump_eff.html
@@ -10,17 +10,7 @@
 	<h1>Pump Efficiency</h1>
 	Pump Style
 	<select name='pump_style' style='vertical-align: middle'>
-        <option selected disabled>Choose</option>
-		<option>End suction slurry</option>
-        <option>End suction sewage</option>
-        <option>End suction stock</option>
-        <option>API double suction</option>
-        <option>Multistage boiler feed</option>
-        <option>End suction ANSI/API</option>
-        <option>Axial flow</option>
-        <option>Double suction</option>
-        <option>Vertical turbine</option>
-        <option>Large end suction</option>
+        <option disabled>Choose</option>
     </select>
 	<canvas id=plot width="700" height="500" style='margin-top:1rem'></canvas>
 </div>
@@ -54,7 +44,11 @@
 	}
 	 
 	Cnv = dom('canvas');
+
+	nm('pump_style').append($('#tmp_pump').children());
+	pg(':disabled').prop('selected',true);
 	
+
 	nm('pump_style').change(()=>{
 		Cnv.width+=0;
 		plot();
