--- a/notes.html
+++ b/notes.html
@@ -27,6 +27,8 @@
 	Comments<br>
 	<textarea name='comment' rows=10 cols=100/><br>
 </form>
+<p style='font-style:italic'>Changes saved automatically</p>
+<a onclick='back();return false;' href=''>Back to Pump Conditions</a>
 <script>
 	setCtls(Cond);
 	
