--- a/conditions.html
+++ b/conditions.html
@@ -15,6 +15,11 @@
 </style>
 <div style='display: inline-block'>
 	<h1>Pump Conditions</h1>
+	<ul style='font-style:italic'>
+		<li>Create and edit</li>
+		<li>Click to edit description</li>
+		<li>Select conditions and click <i class="fa fa-table"></i> to edit input parameters</li>		
+	</ul>
 	<table id=cond>
 		<tr>
 			<td><input type="checkbox" onclick="setGrid(this)"></td>
